# haskell-snake

./: ChangeLog.md  LICENSE  README.md  TODO.txt  bouncing-ball.cabal  haskell-snake.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Lib.hs  Vec2.hs
src/Snake/: Core.hs  Io.hs  RandomVec.hs
src/Vec2/: Random.hs
